[tool.poetry]
name = "polars-expr-transformer-demo"
version = "0.1.0"
description = "Streamlit app for Polars Expression Transformer"
readme = "README.md"
authors = ["Edward van Eechoud <evaneechoud@gmail.com>"]
repository = "https://github.com/edwardvaneechoud/polars-expr-transformer-demo"

packages = [
    { include = "streamlit_app", from = "." },
]

include = [
    "streamlit_app/assets/*.py"
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"  # Limit Python version to avoid metadata issues
streamlit = "^1.44.0"
polars = ">1.8.2,<=1.25.2"
polars-expr-transformer = "^0.4.6.0"
networkx = "^3.4.2"
matplotlib = "^3.10.1"
streamlit-agraph = "^0.0.45"

[tool.poetry.group.dev.dependencies]
pytest = "~7.4.0"
check-manifest = "^0.46"
flake8 = "^3.9.2"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"